[package]
name = "atlas-transparency-log"
version = "0.1.2"
edition = "2021"
authors = ["Marcin Spoczynski <marcin.spoczynski@intel.com>", "Marcela Melara <marcela.melara@intel.com"]
description = "A cryptographically secure transparency log service for C2PA manifests with Merkle tree proofs"
repository = "https://github.com/IntelLabs/atlas-transparency-log"
license = "Apache-2.0"
readme = "README.md"
keywords = ["c2pa", "transparency-log", "merkle-tree", "cryptography", "audit"]
categories = ["cryptography", "web-programming::http-server", "authentication"]
documentation = "https://docs.rs/atlas-transparency-log" 

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "atlas-transparency-log"
path = "src/main.rs"

[lib]
name = "atlas_transparency_log"
path = "src/lib.rs"

[dependencies]
atlas-common = { version = "0.1.0", features = ["hash", "c2pa", "validation"] }
actix-web = "4.5"
base64 = "0.22"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
parking_lot = "0.12"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
actix-rt = "2.9"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true